feature: api for admin to show final scoreboard
