# api/pkg/response/response.go
@@ -5,3 +5,7 @@ import "github.com/Improwised/quizz-app/api/models"
 type ResponseFinalScore struct {
 	FinalScore []models.FinalScoreBoard
 }
+
+type ResponseFinalScoreForAdmin struct {
+	FinalScore []models.FinalScoreBoardAdmin
+}
